RESOLVED FIXED114990
Slow/beachballing when using the find bar on a page with plug-ins
https://bugs.webkit.org/show_bug.cgi?id=114990
Summary Slow/beachballing when using the find bar on a page with plug-ins
Anders Carlsson
Reported 2013-04-22 13:39:23 PDT
Slow/beachballing when using the find bar on a page with plug-ins
Attachments
Patch (3.08 KB, patch)
2013-04-22 13:40 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2013-04-22 13:40:26 PDT
Tim Horton
Comment 2 2013-04-22 13:41:27 PDT
Comment on attachment 199097 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=199097&action=review > Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1686 > + // snapshot plug-ins, because they can never be pained as part of the find indicator. s/pained/painted/
Anders Carlsson
Comment 3 2013-04-22 13:44:54 PDT
Note You need to log in before you can comment on or make changes to this bug.